--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/baguette-pizza.html">Baguette Pizza</a>
+    <ul>
+        <li><a href="recipes/baguette-pizza.html">Baguette Pizza</a></li>
+        <li><a href="recipes/air-fryer-tilapia.html">Air Fryer Tilapia</a></li>
+        <li><a href="recipes/beef-enchiladas.html">Beef Enchiladas</a></li>
+    </ul>
+    
 </body>
 </html>
