--- a/recipes/baguette-pizza.html
+++ b/recipes/baguette-pizza.html
@@ -1,1 +1,23 @@
 <h1>Baguette Pizza</h1>
+<img src="../images/Baguette-Pizza.jpg" alt="A baguette cut in half with pizza toppings">
+
+<h2>Description</h2>
+<p>Take a regular baguette and split lengthwise to create a tasty pizza. Toppings can be as simple as sauce and cheese, or upgrade with pepperoni and sausage</p>
+
+<h2>Ingredients</h2>
+<ul>
+    <li>1 French Baguette</li>
+    <li>1/2 cup pizza sauce, or as needed</li>
+    <li>2/3 cup shredded mozzarella cheese</li>
+    <li>2 ounces cooked and crumbled sausage</li>
+    <li>2 ounces mini pepperoni slices</li>
+</ul>
+
+<h2>Steps</h2>
+<ol>
+    <li>Preheat the oven to 375 degrees F (190 degree C).</li>
+    <li>Split baguette in half lengthwise. Warm pizza sauce in a microwave-safe bowl until hot, about 45 seconds.</li>
+    <li>Spread pizza sauce on baguette, sprinkle on cheese, and scatter sausage and pepperoni on top as desired. Place pizza onto a baking tray.</li>
+    <li>Bake in a preheated oven until oven until cheese is golden, about 18 minutes.</li>
+    <li>Cut pizza crosswise into slices. Serve and enjoy.</li>
+</ol>
